--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.btconsole.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/title_app" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
